--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,7 @@
     <title>Common Cents Party</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
-  <body>
+  <body style="background-color: #FFCCE6">
     <div class="container">
       <div class="nav">
         <h4>Common Cents Party</h4>
